--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3.3'
+version: "3.3"
 services:
   server:
     build: .
-    image: imslavko/image-labeling-tool:latest
+    image: yysg/image-labeling-tool:latest
     user: ${CURRENT_UID}
     volumes:
       - "/mnt/vision-nas/image-labeling-tool/uploads:/uploads"
       - "/mnt/vision-nas/image-labeling-tool/db:/db"
     ports:
-     - "5000:3000"
+      - "5000:3000"
